--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,17 +5,9 @@
   <!--[if IE 8 ]>    <html lang="fi" class="no-js ie8"> <![endif]-->
   <!--[if IE 9 ]>    <html lang="fi" class="no-js ie9"> <![endif]-->
   <!--[if (gt IE 9)|!(IE)]><!--> <html lang="fi" class="no-js"> <!--<![endif]-->
-  %head
-    %meta{ :charset => 'UTF-8' }
-    %meta{ "http-equiv" => "X-UA-Compatible", :content => "IE=edge,chrome=1" }
-    %meta{ :name => "description", :content => "" }
-    %meta{ :name => "author", :content => "" }
-    
-    %link{ :rel => "shortcut icon", :href => "/favicon.ico", :type => "image/x-icon"}/
-    %title= "Ilmajoen Salibandy"
-    = stylesheet_link_tag "style.css?v=2", "dropdown"
-    = javascript_include_tag "modernizr-1.6.min"
-    
+  
+  = render :partial => 'layouts/head'
+  
   %body
     #container
       #top= render :partial => 'layouts/global_nav'
