--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -223,13 +223,16 @@ button {  width: auto; overflow: visible; }
 body, html {
   font-family:"Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
   background-color:#f7f8fb;
-  color:#5f5f61;
+  color:#565656;
   height:100%;
 }
 
+a { color:#4e628b; }
+a:hover { color:#3080c8; }
+
 #container {
   min-height:100%;
-  background: url("/images/ISB-logo-background.png") no-repeat right 200px;
+  background:url("/images/ISB-logo-background.png") no-repeat right 180px;
 }
 
 div.center-wrapper, aside.center-wrapper, nav.center-wrapper{
@@ -243,7 +246,7 @@ div.center-wrapper, aside.center-wrapper, nav.center-wrapper{
 }
 
 div#main-header {
-  height:206px;
+  height:175px;
   background-color:#C4D1EB;
   border-top: 2px solid #dae3f6;
   border-bottom: 2px solid #b0c1e5;
@@ -256,14 +259,8 @@ div#main-header {
 }
 
 #main-header img {
-  margin-top:10px;
+  margin:5px 0 0 25px;
   vertical-align:middle;
-}
-
-div#main-header header h1 {
-  display: inline;
-  font-size: 4em;
-  padding-left:30px; 
 }
 
 #breadcrumb {
@@ -304,6 +301,10 @@ nav#section-nav ul li {
   padding-left: 10px;
 }
 
+nav.pagination {
+  margin: 10px 0 10px;
+}
+
 .jcarousel-item {
   margin:10px;
 }
@@ -338,13 +339,11 @@ section#main {
   overflow:hidden;
 }
 
-#main-container h1 
-{
-  border-left:5px solid #4e628b;
-  font-family:"Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
-  font-weight:bold;
-  font-size: 2.50em;  
-  margin:10px 0  0;
+#main-container h1 {
+  font-family:'Molengo', Verdana, Arial, Helvetica, sans-serif;
+  font-weight:normal;
+  font-size: 3em;
+  margin:10px 0 20px;
   line-height:105%;
   padding: 8px 15px 8px 10px;
   letter-spacing:0.05em;
@@ -359,20 +358,23 @@ section#main {
   padding:0;
 }
 
+.meta {
+  color:#999;
+  font-size:11px;
+}
+
+article.comment {
+  margin-top:25px;
+  border-bottom:1px solid #E1E1E2;
+  padding-bottom:10px;
+}
+
 article p {
   margin:10px 0 0 10px;
 }
 
 .entry {
   margin: 10px 0 10px;
-}
-
-.entry h2 a {
-  color:#4e628b;
-}
-
-.entry h2 a:hover {
-  color:#3080c8;
 }
 
 ul#supporter-carousel {
