--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -363,7 +363,7 @@ section#main {
   font-size:11px;
 }
 
-article.comment {
+article.entry {
   margin-top:25px;
   border-bottom:1px solid #E1E1E2;
   padding-bottom:10px;
