--- a/app/views/layouts/_section_nav.html.haml
+++ b/app/views/layouts/_section_nav.html.haml
@@ -1,11 +1,3 @@
 %h1= @section
 
-%ul
-  %li= create_menu_item 'Ajankohtaista', :news
-  %li= create_menu_item 'Joukkue', :team
-  %li= create_menu_item 'Vieraskirja', :guestbook
-  %li= create_menu_item 'Ottelut', :matches
-  %li= create_menu_item 'Pistepörssi', :statistics
-  %li= create_menu_item 'Sarjataulukko', :standings
-  %li= create_menu_item 'Linkit', :links
-  %li= create_menu_item 'Yhteystiedot', :contact_info
+= render_navigation(:level => 1..2, :context => :section)
