--- a/app/views/admin/link_categories/index.html.haml
+++ b/app/views/admin/link_categories/index.html.haml
@@ -1,6 +1,8 @@
-%h1 Linkit
-
 = section_selection
+
+%header
+  %h1 Linkit
+
 #contextNavi
   = link_to image_tag('add.png', :size => '16x16'), new_admin_link_category_path
   = link_to 'Luo uusi linkkikategoria', new_admin_link_category_path
