--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -299,13 +299,16 @@ table#statistics thead tr{
   border-bottom: 1px solid black;
 }
 
+table#statistics tbody tr { line-height:26px; }
+
 table#statistics tbody tr td {
-  text-align: center;
+  text-align:center;
+  padding:0 10px 0 10px;
 }
 
 table#statistics tbody tr td:first-child {
-  padding-right: 20px;
-  text-align: left;
+  padding:0 30px 0 0;
+  text-align:left;
 }
 
 tr.even {
