--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,5 +1,4 @@
-%header
-  %h1 Unohditko salasanasi?
+%h2 Unohditko salasanasi?
 
 = form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f|
   = devise_error_messages!
@@ -7,5 +6,5 @@
     = f.label :email, "Sähköposti"
     %br/
     = f.email_field :email
-  %p= f.submit "Lähetä minulle ohjeet salasanan nollaamiseen"
+  %p= f.submit "Nollaa salasanani"
 = render :partial => "devise/shared/links"
