Added sign out button to admin back-end.

--- a/app/views/layouts/admin/_header.html.haml
+++ b/app/views/layouts/admin/_header.html.haml
@@ -1,2 +1,5 @@
 %img{:src => '/images/isb_logo_small.png', :height => 60, :width => 60}
 %h1 Hallintasivut
+
+#sign-out
+  = link_to 'Kirjaudu ulos', destroy_admin_user_session_path
