Home page now shows text \"no upcoming matches\" if no upcoming matches are found.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -10,9 +10,12 @@
 
 %section#frontpage-matches
   %h1 Kuukauden ottelut
-  - @upcoming_matches.each do |match|
-    .entry
-      %h2= link_to match, match_path(match.partition.season.section.slug, match)
-      .meta
-        = "#{match.partition.season.section} |"
-        %time{:datetime => html5_datetime(match.start_time)}= match.start_time
+  - unless @upcoming_matches.blank?
+    - @upcoming_matches.each do |match|
+      .entry
+        %h2= link_to match, match_path(match.partition.season.section.slug, match)
+        .meta
+          = "#{match.partition.season.section} |"
+          %time{:datetime => html5_datetime(match.start_time)}= match.start_time
+  - else
+    = "Ei tulevia otteluita."
