--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -6,7 +6,7 @@
       .meta
         %time{:datetime => html5_datetime(news_post.created_at)}= news_post.created_at
         = " | "
-        = news_post.sections.to_sentence :two_words_connector => " ja ", :last_word_connector => ", ja "
+        = section_link_list_for news_post.sections
 
 %section#frontpage-matches
   %h1 Kuukauden ottelut
