--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -88,7 +88,7 @@ body, html {
 }
 
 a { color:#3080c8; }
-a:hover { color:#4e628b; }
+a:hover, .meta a:hover { color:#4e628b; }
 
 #container {
   min-height:100%;
@@ -235,6 +235,8 @@ section#main {
   color:#999;
   font-size:11px;
 }
+
+.meta a { color:#999; }
 
 article.entry {
   margin-top:25px;
