Added banner image to home page.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,8 @@
+#frontpage-banner
+  = image_tag 'banner.jpg', :size => '966x426'
+  #frontpage-banner-caption
+    = "Sähäkkää salibandyä Ilmajoelta"
+
 %section#frontpage-news
   %h1 Tuoreimmat uutiset
   - @news.each do |news_post|
