--- a/public/stylesheets/admin_style.css
+++ b/public/stylesheets/admin_style.css
@@ -312,6 +312,8 @@ ul.ui-autocomplete {
 
 .ui-sortable tr td { padding-right:12px; }
 
+tr.ui-sortable-helper { box-shadow:8px 8px 9px #999999; }
+
 tr.ui-sortable-placeholder {
   height:40px;
   padding-right:12px;
