--- a/app/views/layouts/admin/application.html.haml
+++ b/app/views/layouts/admin/application.html.haml
@@ -11,7 +11,7 @@
     %meta{ :name => "description", :content => "" }
     %meta{ :name => "author", :content => "" }
     
-    %link{ :rel => "shortcut icon", :href => "/favicon.ico", :type => "image/x-icon"}/
+    %link{ :rel => "shortcut icon", :href => "/images/favicon.ico", :type => "image/x-icon"}/
     %title= "ISB Hallintasivut - " + controller.controller_name.capitalize
     = csrf_meta_tag
     = javascript_include_tag "modernizr-1.7.min"
