--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -4,7 +4,7 @@
   %meta{ :name => "description", :content => "" }
   %meta{ :name => "author", :content => "" }
   
-  %link{ :rel => "shortcut icon", :href => "/favicon.ico", :type => "image/x-icon"}/
+  %link{ :rel => "shortcut icon", :href => "/images/favicon.ico", :type => "image/x-icon"}/
   %title= "Ilmajoen Salibandy"
   = stylesheet_link_tag "style.css?v=2", "dropdown", "http://fonts.googleapis.com/css?family=Molengo"
   = javascript_include_tag "modernizr-1.7.min"
