--- a/app/views/devise/mailer/reset_password_instructions.html.haml
+++ b/app/views/devise/mailer/reset_password_instructions.html.haml
@@ -1,6 +1,6 @@
 %p
-  Hello #{@resource.email}!
-%p Someone has requested a link to change your password, and you can do this through the link below.
-%p= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token)
-%p If you didn't request this, please ignore this email.
-%p Your password won't change until you access the link above and create a new one.
+  Hei #{@resource.first_name} #{@resource.last_name}!
+%p Joku on pyytänyt linkkiä, jolla voit vaihtaa unohtuneen salasanasi. Voit vaihtaa salasanasi alla olevan linkin kautta.
+%p= link_to 'Vaihda salasanani', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token)
+%p Voit jättää huomioimatta tämän viestin, jos et pyytänyt tätä.
+%p Salasanasi ei vaihdu, ennen kuin seuraat linkkiä ja asetat uuden salasanan.
