--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -90,10 +90,7 @@ body, html {
 a { color:#3080c8; }
 a:hover, .meta a:hover { color:#4e628b; }
 
-#container {
-  min-height:100%;
-  background:url("/images/ISB-logo-background.png") no-repeat right 180px;
-}
+#container { min-height:100%; }
 
 div.center-wrapper, aside.center-wrapper, nav.center-wrapper{
   margin:auto;
@@ -102,7 +99,7 @@ div.center-wrapper, aside.center-wrapper, nav.center-wrapper{
 
 #top {
   height:45px;
-  background-color:#5f70bf;
+  background-color:#435396;
 }
 
 div#main-header {
@@ -123,16 +120,14 @@ div#main-header {
   vertical-align:middle;
 }
 
-#breadcrumb {
-  font: normal 0.8em verdana, arial, helvetica, sans-seri;
-}
-
-.basic-box, #breadcrumb, #frontpage-news, section#main, article#news, div#frontpage-banner {
+.basic-box, #frontpage-news, section#main, article#news, div#frontpage-banner {
   border:1px solid #e1e1e2;
   margin-top:10px;
-  padding:10px;
+  padding:8px;
   background-color:#ffffff;
 }
+
+.frontpage-right-col section { width:358px; }
 
 nav#section-nav {
   float:left;
@@ -141,7 +136,7 @@ nav#section-nav {
 }
 
 nav#section-nav h1 {
-  background-color:#5f70bf;
+  background-color:#435396;
   border:1px solid #e1e1e2;
   color:#f7f8fb;
   font-size:1.6em;
@@ -228,12 +223,10 @@ section#frontpage-news {
 }
 
 div#main-container {
-  padding-bottom:210px; /*footer height + 10px*/
+  padding-bottom:260px; /*footer height + 40px*/
   overflow:auto;
 }
-section#main {
-  overflow:hidden;
-}
+section#main { overflow:hidden; }
 
 #main-container h1 {
   font-family:'Molengo', Verdana, Arial, Helvetica, sans-serif;
@@ -275,18 +268,31 @@ article p {
   margin: 20px 0 20px;
 }
 
-ul#supporter-carousel {
-  display: none;
+aside#supporters { background-color: #ececec; }
+
+aside#supporters h1 {
+  color:#565656;
+  font-family:'Molengo', Verdana, Arial, Helvetica, sans-serif;
+  font-size:1.7em;
+  font-weight:normal;
+  margin:0 0 10px 10px;
 }
+
+.jcarousel-container-horizontal {
+  width:954px;
+  padding-left:10px;
+}
+
+ul#supporter-carousel { display:none; }
 
 footer {
   position: relative;
   width:100%;
-  margin-top:-200px;
-  height:200px;
-  border-top: 1px solid #c4c4c4;
-  background: #efefec;
+  margin-top:-220px;
+  height:220px;
+  background:#435396;
   clear:both;
+  color: #FFFFFF;
 }
 
 form.comment ol {
