--- a/app/views/layouts/_global_nav.html.haml
+++ b/app/views/layouts/_global_nav.html.haml
@@ -9,4 +9,4 @@
             %li.section= link_to section, section_news_path(section.slug)
             %li= link_to 'Vieraskirja', guestbook_path(section.slug)
             %li= link_to 'Sarjataulukko', standings_path(section.slug)
-            %li= link_to 'Tilastot', statistics_path(section.slug)
+            %li= link_to 'Pistepörssi', statistics_path(section.slug)
