--- a/app/views/layouts/_global_nav.html.haml
+++ b/app/views/layouts/_global_nav.html.haml
@@ -1,7 +1,7 @@
 %nav{ :id => 'global-nav', :class => 'center-wrapper' }
   %ul.topnav
     %li= link_to 'Etusivu', '/'
-    - SectionGroup.all.each do |group|
+    - SectionGroup.visible.each do |group|
       %li
         = link_to group, '#'
         %ul.subnav
