--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -2,14 +2,14 @@
   %h1 Sponsorit
   %ul#supporter-carousel
     %li= link_to image_tag("/images/supporters/eepee.gif", :size => '190x39'), "http://www.eepee.fi/", :rel => "nofollow", :title => "Etelä-Pohjanmaan Osuuskauppa"
-    %li= link_to image_tag("/images/supporters/intersport.gif", :size => '190x55'), "http://www.intersport.fi/", :rel => "nofollow", :title => "Intersport"
-    %li= link_to image_tag("/images/supporters/nordea_logo.gif", :size => '150x39'), "http://www.nordea.fi/", :rel => "nofollow", :title => "Nordea"
+    %li= link_to image_tag("/images/supporters/supersport.png", :size => '190x122'), "http://www.supersport.fi/", :rel => "nofollow", :title => "Supersport"
+    %li= link_to image_tag("/images/supporters/nordea.png", :size => '150x39'), "http://www.nordea.fi/", :rel => "nofollow", :title => "Nordea"
     %li= link_to image_tag("/images/supporters/botniakorro.gif", :size => '190x28'), "http://www.botnia-korro.fi/", :rel => "nofollow", :title => "Botnia-Korro Oy"
     %li= link_to image_tag("/images/supporters/kora_logo.png", :size => '146x130'), "http://sahkoa.net/", :rel => "nofollow", :title => "KORA Installations Oy"
     %li= link_to image_tag("/images/supporters/piikki_logo.png", :size => '146x67'), "http://www.pizzeriapiikki.fi/", :rel => "nofollow", :title => "Pizzeria Piikki"
     %li= link_to image_tag("/images/supporters/lemminkainen_logo.png", :size => '190x48'), "http://www.lemminkainen.fi/", :rel => "nofollow", :title => "Lemminkäinen Oyj"
-    %li= image_tag("/images/supporters/ilmajoen_apteekki.gif", :size => '190x42')
-    %li= link_to image_tag("/images/supporters/carozel.png", :size => '190x88'), "http://www.carozel.fi/", :rel => "nofollow", :title => "Carozel"
+    %li= link_to image_tag("/images/supporters/ilmajoen_omeijeri_logo.png", :size => '129x130'), "http://www.ilmajoenosuusmeijeri.fi/", :rel => "nofollow", :title => "Ilmajoen Osuusmeijeri"
+    %li= image_tag("/images/supporters/ilmajoen_apteekki.png", :size => '190x42')
     
 .center-wrapper
   %p © Ilmajoen salibandy 2011
