--- a/app/views/admin/seasons/new.html.haml
+++ b/app/views/admin/seasons/new.html.haml
@@ -1,4 +1,4 @@
-%h1= "Luo uusi kausi"
+%h1= "Luo uusi kausi joukkueosiolle '#{@season.section}'"
 
 #contextNavi
   = link_to image_tag('arrow_left.png', :size => '16x16'), admin_seasons_path
@@ -6,8 +6,7 @@
 
 = semantic_form_for @season, :url => admin_seasons_path do |form| 
   = form.inputs do
-    = form.input :section, :as => :select, :label => "Joukkueosio",
-      :collection => Section.leafs, :include_blank => false
+    = form.input :section_id, :as => :hidden 
     = form.input :start_year, :label => "Aloitusvuosi"
     = form.input :division, :label => 'Divisioona'
     
