--- a/app/views/admin/seasons/show.html.haml
+++ b/app/views/admin/seasons/show.html.haml
@@ -7,8 +7,8 @@
   = link_to image_tag('pencil.png', :size => '16x16'), edit_admin_season_path(@season)
   = link_to 'Muokkaa kautta', edit_admin_season_path(@season)
   \|
-  = link_to image_tag('add.png', :size => '16x16'), new_admin_season_partition_path(@season), :title => 'Luo uusi joukkueosio'
-  = link_to "Luo uusi joukkueosio", new_admin_season_partition_path(@season), :title => 'Luo uusi joukkueosio'
+  = link_to image_tag('add.png', :size => '16x16'), new_admin_season_partition_path(@season), :title => 'Luo uusi kausiosio'
+  = link_to "Luo uusi kausiosio", new_admin_season_partition_path(@season), :title => 'Luo uusi kausiosio'
   \|
   = link_to "Joukkue", admin_season_roles_path(@season), :title => 'Muokkaa joukkuetta'
 
